kubernetes/ingress-rule/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: external-nginx
  rules:
  - host: grafana.eoyebamiji.com
    http:
      paths:
      - path: /
        pathType: prefix
        backend:
          service:
            name: grafana-service-name  # Replace with the actual service name
            port:
              number: 80  # Replace with the actual service port
